--- a/volandouy oficial/src/main/webapp/front/consultaPaqRutasVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/consultaPaqRutasVuelo.html
@@ -103,9 +103,9 @@
           
           <!-- VISTA DE LISTA -->
           <div id="listView">
-            <div class="d-flex justify-content-between align-items-center mb-4">
+            <div class="text-center">
               <div>
-                <h1 class="h2 mb-1">Paquetes de Rutas de Vuelo</h1>
+                <h1 class="text-center">Paquetes de Rutas de Vuelo</h1>
                 <p class="text-muted">Selecciona un paquete para ver sus detalles completos</p>
               </div>
             </div>
