--- a/volandouy oficial/src/main/webapp/front/reservarVuelo.html
+++ b/volandouy oficial/src/main/webapp/front/reservarVuelo.html
@@ -120,7 +120,7 @@
 
       <!-- CONTENIDO -->
       <main class="col-12 col-lg-9 col-xl-10 py-4">
-        <div class="container">
+        <div class="container-fluid text-center">
           <h1 class="mb-2">Reservar vuelo</h1>
           <p class="text-muted">Elegí aerolínea y ruta; luego seleccioná tu vuelo.</p>
 
