--- a/volandouy oficial/src/main/webapp/front/consultaUsuario.html
+++ b/volandouy oficial/src/main/webapp/front/consultaUsuario.html
@@ -9,22 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Tu CSS -->
   <link href="../assets/css/styles.css" rel="stylesheet">
-
-
-  <style>
-    /* --- Ajustes rápidos para navbar fija + sidebar tipo docs --- */
-    body { padding-top: 56px; } /* alto aprox navbar fixed-top */
-    .sidebar{
-      top: 56px;                 /* que no quede debajo de la navbar */
-      max-height: calc(100vh - 56px);
-      overflow: auto;
-    }
-    .list-group-item.active {
-      background-color: #0d6efd;
-      border-color: #0d6efd;
-      color: #fff;
-    }
-  </style>
 </head>
 
 
@@ -170,6 +154,8 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Catálogo de paquetes, rutas y vuelos (para reutilizar detalles) -->
+  <script src="../assets/js/consulta-paquetes.js"></script>
   <script src="../assets/js/consulta-usuario.js"></script>
   <script src="../assets/js/auth.js"></script>
   <script src="../assets/js/roles.js"></script>
